### kitEvent

(c) 2011 - 2012 by phpManufaktur
Ralf Hertsch, Stockholmer Str. 31, 13359 Berlin (Germany)
http://phpManufaktur.de - ralf.hertsch@phpManufaktur.de

0.32 - NOT PUBLISHED, JUST IN PROGRESS

* removed check for early kitEvent versions from precheck.php
* fixed: install try to initialize the old configuration table

0.31 - 2012-10-01

* added additional placeholder for ISO date format
* added template /10 with sample for event micro data
* extended code cleanup at all classes and files
* moved all templates from /htt to /templates, separate by frontend, enable
  custom templates for the backend and for the search results
* changed license from GNU GPL to MIT license (MIT)
* updated all header informations  
* removed class.droplets.php - no longer needed
* renamed frontend.css to kit_event.css to force improved loading by the
  dropletsExtension
* removed class.editor.php - no longer needed 
* removed backend_body.js - no longer needed
* changed all language strings to I18n mode

0.30 - 2012-07-14

* added check for DropletsExtension to precheck.php
* changed precheck.php

0.29 - 2012-06-14

* removed WebsiteBaker version check

0.28 - 2012-06-01

* fixed - xssPrevent() is too grabby, reduced to own requests
* changed: introduce $_SESSION['KIT_HTML_REQUEST'] to mark fields which should 
  not processed by xssPrevent()
* moved repository from SVN to GitHub
* updated all header informations
* added CHANGELOG
* added LICENSE
* added README.md
* removed info.txt
* update automatic release information in class.backend.php

0.27 - 2011-06-04

* Changed interaction with droplets_extension

0.26 - 2011-05-22

* Added interaction with droplets_extension, enabling full WebsiteBaker search 
  and adding header information on detail page (title, description, keywords)

0.25 - 2011-03-26

* New BETA Release, start adding and changing basic function which are not 
  compatible to the previous releases

0.11 - 0.24 - 2011-03-25

* Special edition, non-public
